[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Debug_Labels.gd" type="Script" id=1]

[node name="Debug" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -278.595
margin_right = -238.595
margin_bottom = 14.0
text = "label1"
align = 2

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -278.595
margin_top = 15.9606
margin_right = -238.595
margin_bottom = 29.9606
text = "label2"
align = 2

[node name="Label3" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -278.595
margin_top = 32.8937
margin_right = -238.595
margin_bottom = 46.8937
text = "label3"
align = 2

[node name="Label4" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -278.595
margin_top = 50.4988
margin_right = -238.595
margin_bottom = 64.4988
text = "label4"
align = 2
